package com.parmida.occupationalhealth.common.enumeration;

public enum Gender {
	MALE, FEMALE
}
