package com.parmida.occupationalhealth.common.enumeration;

public enum MarridationStatus {
	SINGLE,MARRIDATE,DIVORCE


}
