package com.parmida.occupationalhealth.common.enumeration;

public enum MilitaryStatus {
	DONE,MEDICAL_EXEMPTION, SPONSORSHIP_EXEMPTION, EDUCATIONAL_EXEMPTION,
	LEADERSHIP_AMNESTY ,EXEMPTION_SPECIAL ,HEAD_HOUSEHOLD_DISABILITYEXEMPTION ,
	SPECIAL_CASES_EXEMPTION ,SELF_SACRIFICE_EXEMPTION ,THREE_BROTHERHOOD_EXEMPTION ,
	ELITE_SUPERIOR_TALENT_EXEMPTION ,OTHER_EXEMPTION, OTHER

}
