@startuml
enum Gender{
    MALE, FEMALE
}

enum MarridationStatus{
    SINGLE,MARRIDATE, DIVORCE
}

enum MilitaryStatus{
    DONE,MEDICAL_EXEMPTION, SPONSORSHIP_EXEMPTION, EDUCATIONAL_EXEMPTION,
    LEADERSHIP_AMNESTY ,EXEMPTION_SPECIAL ,HEAD_HOUSEHOLD_DISABILITYEXEMPTION ,
    SPECIAL_CASES_EXEMPTION ,SELF_SACRIFICE_EXEMPTION ,THREE_BROTHERHOOD_EXEMPTION ,
    ELITE_SUPERIOR_TALENT_EXEMPTION ,OTHER_EXEMPTION, OTHER
}

class Organization{
    - name: String
    - phome: String
    - address: String
    - employeeCount: Integer
}

class Job{
    - organization: Organization
    - title: String
    - parent: Job
    - description: String
}

class Measure {
    - measur: String 
    - description: String
}

class MedicalCheckUpsease {
    - code: String 
    - parent: MedicalCheckUpsease
    - name: String
    - measure : Measure
    - maxMeasur: float
    - minMeasur: float
    - description: String
}


class Visited{
    - firstname: String
    - lastname: String
    - nationalId: String
    - militaryStatus: MilitaryStatus
    - gender: Gender
    - birthday: Long
    - education: String
    - phone: String
    - address: String
    - marridationStatus: MarridationStatus
    - childCount: Integer
    - ethnicity: String
    - height: Float
    - weight: Float
}

class RelVisitedMedicalCheckUpsease{
    - mdicalCheckUpsease: MedicalCheckUpsease
    - visited: Visited
    - datetime: Long
    - value: Float
}

class RelVisitedJob{
    - job: Job
    - workingConditions: String
    - hasProblem: Boolean
    - visited: Visited
    - datetime: Long
}

MedicalCheckUpsease "0..n"-->"1" Measure
MedicalCheckUpsease "0..n"-->"1" MedicalCheckUpsease
Job "0..n"-->"1" Job
Visited "0..n".->"1" MilitaryStatus
Visited "0..n".->"1" Gender
Visited "0..n".->"1" MarridationStatus
Job "0..n"-->"1" Organization
RelVisitedMedicalCheckUpsease "0..n"-->"0" Visited
RelVisitedMedicalCheckUpsease "0..n"-->"0" MedicalCheckUpsease
RelVisitedJob "0..n"-->"0" Visited
RelVisitedJob "0..n"-->"0" Job
@enduml
